@@ -6,6 +6,7 @@ license             = Perl_5
 
 [@Author::ETHER]
 :version = 0.041
+installer = MakeMaker       ; stay 5.6-friendly
 Git::GatherDir.exclude_filename[] = blog_20130309.md
 AutoPrereqs.skip[] = ^TB2
 Test::MinimumVersion.max_target_perl = 5.006
@@ -17,9 +18,11 @@ Test::Portability.options = test_one_dot = 0
 
 [OnlyCorePrereqs]
 :version = 0.013
-phase = runtime
 starting_version = 5.006    ; warnings
 check_dual_life_versions = 0
+
+[Prereqs::Soften]
+module = Test::Tester
 
 ; authordep Pod::Weaver = 4
 ; authordep Pod::Weaver::Section::Contributors
