@@ -3,8 +3,11 @@ use warnings FATAL => 'all';
 
 # basic tests, using Test::Builder 0.98 or earlier.
 
-use Test::Tester 0.108;
+my $has_test_tester;
+BEGIN { $has_test_tester = eval { require Test::Tester; Test::Tester->VERSION(0.108); 1 } }
+
 use Test::More;
+plan skip_all => 'These tests require Test::Tester 0.108' if not $has_test_tester;
 
 plan skip_all => 'These tests are only for Test::Builder 0.9x'
     if Test::Builder->VERSION >= 1.005;
@@ -14,7 +17,7 @@ plan tests => 19;     # avoid our done_testing hook
 # define our END block first, so it is run last (after TW's END)
 END {
     final_tests()
-        if Test::Builder->VERSION < 1.005;
+        if $has_test_tester and Test::Builder->VERSION < 1.005;
 }
 
 use Test::Warnings ':all';
@@ -43,7 +46,7 @@ had_no_warnings('no warnings, with a custom name');     # TEST 2
 sub final_tests
 {
     my @tests = $capture->details;
-    cmp_results(
+    Test::Tester::cmp_results(
         \@tests,
         [
             {   # TEST 1
@@ -75,4 +78,3 @@ sub final_tests
         'all functionality ok, checking warnings via END block',
     );
 }
-
