@@ -1,9 +1,0 @@
-use strict;
-use warnings FATAL => 'all';
-
-use Test::More 0.94;
-use Test::Vars;
-
-subtest 'all_vars_ok' => sub { all_vars_ok() };
-
-done_testing;
