@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - adjusted packaging and tests to become perl-5.6 friendly,
+            including only using core or dual-lifed prerequisites
 
 0.014     2014-03-01 22:08:26Z
           - fix test that was failing when FOO or BAR environment variables
